Refactor for Java 15